<resources>
    <string name="app_name">BudgetWise</string>
    <string name="welcome_text">Welcome</string>
    <string name="email_label">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_label">Password</string>
    <string name="forget_pass_label">Reseat password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Log In</string>
    <string name="forget_password_text">Forget password_login</string>
    <string name="forget_password">Forget password</string>
    <string name="signup_text">Don\'t have an account? Sign Up</string>
    <string name="next_step">Next Step</string>
    <string name="back_to_login">Back to Login</string>

    <string name="create_account_text">Create Account</string>
    <string name="full_name_label">Full Name</string>
    <string name="name_hint">Enter your Name</string>

    <string name="sign_up_button_text">Sign up</string>
    <string name="signin_text">Already have an account? Log In</string>
    <string name="Search_text">Search</string>


    <string name="Profile_text">Profile</string>


    <string name="goal_label">Goal: $%1$s</string>
    <string name="saved_label">Saved: $%1$s</string>
    <string name="error_loading_details">Error loading saving details</string>
    <string name="error_label">Error</string>
    <string name="amount_format">Amount: %s</string>

</resources>
